crates/keron-lang/tests/corpus/errors/check/secret_eq_string.keron
val token: Secret = secret("op://vault/item/field")

val guess: Boolean = token == "hunter2"
